final version of this project. removed unnecessary filed, checked imports, plots, ouypuyd

--- a/algorithms/BP/BP-bank.ipynb
+++ b/algorithms/BP/BP-bank.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,10 +48,10 @@
     "from sklearn.metrics import confusion_matrix, roc_curve, auc, accuracy_score\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Function for training and evaluating the model\n",
+    "# function for training and evaluating the model\n",
     "def train_and_evaluate(X_train, y_train, X_test, y_test, dataset_name):\n",
     "    param_grid = {\n",
-    "        'hidden_layer_sizes': [(10,), (50,), (100,)],  \n",
+    "        'hidden_layer_sizes': [(2,), (5,), (10,), (100),],  \n",
     "        'learning_rate_init': [0.001, 0.01, 0.1],    \n",
     "        'max_iter': [1000, 1500, 2000]                  \n",
     "    }\n",
@@ -72,7 +72,7 @@
     "    plot_roc_curve_and_auc(y_test, y_pred_test, dataset_name)\n",
     "    return best_model\n",
     "\n",
-    "# Function to plot ROC curve and calculate AUC\n",
+    "# function to plot ROC curve and calculate AUC\n",
     "def plot_roc_curve_and_auc(y_val, y_pred, title):\n",
     "    fpr, tpr, thresholds = roc_curve(y_val, y_pred)\n",
     "    roc_auc = auc(fpr, tpr)\n",
@@ -102,22 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Classification Error (Cross-Validation): 0.09104704097116845\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sebi/.pyenv/versions/3.8.10/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (100) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
+      "Average Classification Error (Cross-Validation): 0.09013657056145677\n"
      ]
     }
    ],
@@ -125,12 +117,12 @@
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
     "# define the model (using the best parameters found, from above)\n",
-    "mlp_cv = MLPClassifier(hidden_layer_sizes=(10,), learning_rate_init=0.1, max_iter=100, random_state=42)\n",
+    "mlp_cv = MLPClassifier(hidden_layer_sizes=(10,), learning_rate_init=0.1, max_iter=200, random_state=42)\n",
     "\n",
     "# Perform k-fold cross-validation\n",
     "cv_scores = cross_val_score(mlp_cv, X_train_bank, y_train_bank.values.ravel(), cv=5, scoring='accuracy')\n",
     "\n",
-    "# Calculate average classification error in cross-validation\n",
+    "# calculate average classification error in cross-validation\n",
     "cv_classification_error = np.mean(1 - cv_scores)\n",
     "print(f\"Average Classification Error (Cross-Validation): {cv_classification_error}\")\n"
    ]
@@ -144,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -176,19 +168,17 @@
       "ROC AUC Score for Bank:  0.7335471608458066\n",
       "Accuracy for Bank:  0.8980582524271845\n",
       "Classification Error for Bank:  0.10194174757281549\n",
-      "Classification Error (Test Set): 0.10194174757281549\n",
-      "Comparison of Errors - CV Error: 0.09104704097116845, Test Error: 0.10194174757281549\n"
+      "Comparison of Errors - CV Error: 0.09013657056145677, Test Error: 0.10194174757281549\n"
      ]
     }
    ],
    "source": [
-    "# Train and evaluate the model on test data\n",
+    "# train and evaluate the model on test data\n",
     "best_model_bank = train_and_evaluate(X_train_bank, y_train_bank, X_test_bank, y_test_bank, \"Bank\")\n",
     "\n",
-    "# Calculate classification error on the test set\n",
+    "# calculate classification error on the test set\n",
     "test_accuracy = best_model_bank.score(X_test_bank, y_test_bank)\n",
     "test_classification_error = 1 - test_accuracy\n",
-    "print(f\"Classification Error (Test Set): {test_classification_error}\")\n",
     "\n",
     "# Compare with cross-validation error\n",
     "print(f\"Comparison of Errors - CV Error: {cv_classification_error}, Test Error: {test_classification_error}\")\n"
