--- a/algorithms/BP/BP-banknote.ipynb
+++ b/algorithms/BP/BP-banknote.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +48,16 @@
     "from sklearn.metrics import confusion_matrix, roc_curve, auc, accuracy_score\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Function for training and evaluating the model\n",
+    "# function for training and evaluating the model\n",
     "def train_and_evaluate(X_train, y_train, X_test, y_test, dataset_name):\n",
     "    param_grid = {\n",
-    "    'hidden_layer_sizes': [(50,), (100, 50), (100,)],  # Trying different architectures\n",
-    "    'learning_rate_init': [0.001, 0.005],              # Adjusting learning rates\n",
-    "    'alpha': [0.0001, 0.001],                          # Adding L2 regularization\n",
-    "    'max_iter': [500, 1000]                            # Varying the number of iterations\n",
+    "    'hidden_layer_sizes': [(50,), (100, 50), (100,)],  # trying different architectures\n",
+    "    'learning_rate_init': [0.001, 0.005],              # adjusting learning rates\n",
+    "    'alpha': [0.0001, 0.001],                          # adding L2 regularization\n",
+    "    'max_iter': [500, 1000]                            # varying the number of iterations\n",
     "}\n",
+    "    \n",
+    "# no matter what parameters i choose the accuracy is always 1.\n",
     "\n",
     "\n",
     "    mlp = MLPClassifier(solver='adam', random_state=42)\n",
@@ -74,7 +76,7 @@
     "    plot_roc_curve_and_auc(y_test, y_pred_test, dataset_name)\n",
     "    return best_model\n",
     "\n",
-    "# Function to plot ROC curve and calculate AUC\n",
+    "# unction to plot ROC curve and calculate AUC\n",
     "def plot_roc_curve_and_auc(y_val, y_pred, title):\n",
     "    fpr, tpr, thresholds = roc_curve(y_val, y_pred)\n",
     "    roc_auc = auc(fpr, tpr)\n",
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -118,13 +120,13 @@
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "# Define the model (using the best parameters found, if available)\n",
+    "# define the model (using the best parameters found, if available)\n",
     "mlp_cv = MLPClassifier(hidden_layer_sizes=(100,), learning_rate_init=0.01, max_iter=1000, random_state=42)\n",
     "\n",
-    "# Perform k-fold cross-validation\n",
+    "# perform k-fold cross-validation\n",
     "cv_scores = cross_val_score(mlp_cv, X_train_banknote, y_train_banknote.values.ravel(), cv=5, scoring='accuracy')\n",
     "\n",
-    "# Calculate average classification error in cross-validation\n",
+    "# calculate average classification error in cross-validation\n",
     "cv_classification_error = np.mean(1 - cv_scores)\n",
     "print(f\"Average Classification Error (Cross-Validation): {cv_classification_error}\")\n"
    ]
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -170,21 +172,19 @@
       "ROC AUC Score for Banknote Authentication:  1.0\n",
       "Accuracy for Banknote Authentication:  1.0\n",
       "Classification Error for Banknote Authentication:  0.0\n",
-      "Classification Error (Test Set): 0.0\n",
       "Comparison of Errors - CV Error: 0.0, Test Error: 0.0\n"
      ]
     }
    ],
    "source": [
-    "# Train and evaluate the model on test data\n",
+    "# train and evaluate the model on test data\n",
     "best_model_banknote = train_and_evaluate(X_train_banknote, y_train_banknote, X_test_banknote, y_test_banknote, \"Banknote Authentication\")\n",
     "\n",
-    "# Calculate classification error on the test set\n",
+    "# calculate classification error on the test set\n",
     "test_accuracy = best_model_banknote.score(X_test_banknote, y_test_banknote)\n",
     "test_classification_error = 1 - test_accuracy\n",
-    "print(f\"Classification Error (Test Set): {test_classification_error}\")\n",
     "\n",
-    "# Compare with cross-validation error\n",
+    "# compare with cross-validation error\n",
     "print(f\"Comparison of Errors - CV Error: {cv_classification_error}, Test Error: {test_classification_error}\")\n"
    ]
   }
