--- a/algorithms/MLR/MLR-banknote.ipynb
+++ b/algorithms/MLR/MLR-banknote.ipynb
@@ -9,18 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from matplotlib import pyplot as plt\n",
-    "import numpy as np\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import confusion_matrix, roc_auc_score\n",
+    "from sklearn.metrics import accuracy_score, auc, confusion_matrix, make_scorer, roc_auc_score, roc_curve\n",
+    "from sklearn.model_selection import GridSearchCV, KFold\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
     "\n",
     "\n",
     "X_train_banknote = pd.read_csv(\"../../input/A2-banknote/banknote_X_train.csv\")\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -111,11 +111,7 @@
     }
    ],
    "source": [
-    "from sklearn.model_selection import cross_val_score, GridSearchCV, KFold\n",
-    "from sklearn.metrics import make_scorer, accuracy_score\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
     "\n",
     "class MLRClassifier:\n",
     "    def __init__(self, threshold=0.5):\n",
@@ -181,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -204,8 +200,7 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import roc_curve, auc\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "\n",
     "def plot_roc(model, X_test, y_test):\n",
     "    y_prob = model.predict(X_test)\n",
