update: less outputs for the roc curve

--- a/algorithms/BP/BP-ring.ipynb
+++ b/algorithms/BP/BP-ring.ipynb
@@ -115,7 +115,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cross-Validation Error (Separable Ring Dataset): 0.011599999999999966\n"
+      "Cross-Validation Error (Separable Ring Dataset): 0.011599999999999966\n",
+      "Cross-Validation Error (Merged Ring Dataset): 0.22750000000000004\n"
      ]
     }
    ],
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +185,6 @@
       "ROC AUC Score for Separable Ring Dataset:  0.9257763364870686\n",
       "Accuracy for Separable Ring Dataset:  0.925\n",
       "Classification Error for Separable Ring Dataset:  0.07499999999999996\n",
-      "Test Set Error (Separable Ring Dataset): 0.07499999999999996\n",
       "\n",
       "Best parameters for Merged Ring Dataset: {'hidden_layer_sizes': (10,), 'learning_rate_init': 0.01, 'max_iter': 1000}\n",
       "Best score (accuracy) for Merged Ring Dataset: 0.7659\n",
@@ -210,7 +210,6 @@
       "ROC AUC Score for Merged Ring Dataset:  0.9294471988171854\n",
       "Accuracy for Merged Ring Dataset:  0.9299\n",
       "Classification Error for Merged Ring Dataset:  0.07010000000000005\n",
-      "Test Set Error (Merged Ring Dataset): 0.07010000000000005\n",
       "Comparison for Separable Ring - CV Error: 0.011599999999999966, Test Error: 0.07499999999999996\n",
       "Comparison for Merged Ring - CV Error: 0.22750000000000004, Test Error: 0.07010000000000005\n"
      ]
